--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     font-family: monospace;
   }
   
-  #toy-header {
+  #button-header {
     display: flex;
     justify-content: center;
     background: #515DA2;
@@ -13,12 +13,12 @@ body {
     padding: 1rem;
   }
   
-  #toy-header img {
+  #button-header img {
     height: 6rem;
     width: auto;
   }
   
-  #toy-collection {
+  #button-collection {
     margin: 2rem;
   }
   
@@ -33,7 +33,7 @@ body {
     box-shadow: 3px 4px #e04b52
   }
   
-  .toy-avatar {
+  .button-avatar {
     justify-self: center;
     height: 12rem;
     width: auto;
@@ -66,7 +66,7 @@ body {
     opacity: .8;
   }
   
-  .add-toy-form {
+  .add-button-form {
     width: 80%
   }
   
