--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,15 @@ body {
     font-family: monospace;
   }
   
+  #simon-header {
+    display: flex;
+    justify-content: center;
+    background: #515DA2;
+    opacity: .8;
+    height: 4rem;
+    padding: 1rem;
+  }
+
   #button-header {
     display: flex;
     justify-content: center;
@@ -39,6 +48,10 @@ body {
     width: auto;
   }
   
+  h1 {
+    text-align: center;     
+  }
+
   button {
     position: relative;
     background-color: #e04b52;
@@ -99,3 +112,9 @@ body {
     margin: 3px;
   }
   
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+  }
