--- a/styles.css
+++ b/styles.css
@@ -1,129 +1,129 @@
-
 body {
-    margin: 0;
-    font-family: monospace;
-  }
-  
-  #simon-header {
-    display: flex;
-    justify-content: center;
-    background: #515DA2;
-    opacity: .8;
-    height: 4rem;
-    padding: 1rem;
-  }
+  margin: 0;
+  font-family: monospace;
+}
 
-  #button-header {
-    display: flex;
-    justify-content: center;
-    background: #515DA2;
-    opacity: .8;
-    height: 7rem;
-    padding: 1rem;
-  }
-  
-  #button-header img {
-    height: 6rem;
-    width: auto;
-  }
-  
-  #button-collection {
-    margin: 2rem;
-  }
-  
-  .card {
-    text-align: center;
-    border: grey solid 1px;
-    padding: 1rem;
-    width: 10rem;
-    height: 8rem;
-    display: inline-grid;
-    margin: 1rem 2rem;
-    box-shadow: 3px 4px #e04b52
-  }
-  
-  .button-avatar {
-    justify-self: center;
-    height: 12rem;
-    width: auto;
-  }
-  
-  h1 {
-    text-align: center;     
-  }
+#simon-header {
+  display: flex;
+  justify-content: center;
+  background: #515DA2;
+  opacity: .8;
+  height: 4rem;
+  padding: 1rem;
+}
 
-  button {
-    position: relative;
-    background-color: #e04b52;
-    border: none;
-    border-radius: 5px;
-    height: 3rem;
-    width: max-content;
-    color: whitesmoke;
-    font-size: 18px;
-    justify-self: center;
-  }
-  
-  button:hover {
-    background-color: whitesmoke;
-    border: #e04b52 solid 1px;
-    color: #e04b52;
-  }
-  
-  .form-container {
-    float: left;
-    width: 16%;
-    padding: 5px;
-  }
-  .container {
-    padding: 1rem;
-/*    width: stretch; */
-    height: auto;
-    display: none;
-    background: #515DA2;
-    opacity: .8;
-  }
-  
-  #config-container {
-    display: none;
-  }
+#button-header {
+  display: flex;
+  justify-content: center;
+  background: #515DA2;
+  opacity: .8;
+  height: 7rem;
+  padding: 1rem;
+}
 
-  .configure-button-form {
-    width: 80%
-  }
-  
-  .submit {
-    position: relative;
-    background-color: #e04b52;
-    border-radius: 5px;
-    height: 2rem;
-    width: max-content;
-    color: whitesmoke;
-    font-size: 18px;
-    justify-self: center;
-    font-family: monospace;
-    margin: 3px;
-  }
-  
-  .submit:hover {
-    background-color: whitesmoke;
-    border: #e04b52 solid 1px;
-    color: #e04b52;
-  }
-  
-  
-  .input-text {
-    border-radius: 5px;
-    height: 2rem;
-    width: 60%;
-    font-size: 18px;
-    font-family: monospace;
-    margin: 3px;
-  }
-  
-  .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 25%;
-  }
+#button-header img {
+  height: 6rem;
+  width: auto;
+}
+
+#button-collection {
+  margin: 2rem;
+}
+
+.card {
+  text-align: center;
+  border: grey solid 1px;
+  padding: 1rem;
+  width: 10rem;
+  height: 8rem;
+  display: inline-grid;
+  margin: 1rem 2rem;
+  box-shadow: 3px 4px #e04b52
+}
+
+.but  n-avatar {
+  justify-self: center;
+  height: 12rem;
+  width: auto;
+}
+
+h1 {
+  text-align: center;
+}
+
+button {
+  position: relative;
+  background-color: #e04b52;
+  border: none;
+  border-radius: 5px;
+  height: 3rem;
+  width: max-content;
+  color: whitesmoke;
+  font-size: 18px;
+  justify-self: center;
+}
+
+button:hover {
+  background-color: whitesmoke;
+  border: #e04b52 solid 1px;
+  color: #e04b52;
+}
+
+.form-container {
+  float: left;
+  width: 16%;
+  padding: 5px;
+}
+
+.container {
+  padding: 1rem;
+  /*    width: stretch; */
+  height: auto;
+  display: none;
+  background: #515DA2;
+  opacity: .8;
+}
+
+#config-container {
+  display: none;
+}
+
+.configure-button-form {
+  width: 80%
+}
+
+.submit {
+  position: relative;
+  background-color: #e04b52;
+  border-radius: 5px;
+  height: 2rem;
+  width: max-content;
+  color: whitesmoke;
+  font-size: 18px;
+  justify-self: center;
+  font-family: monospace;
+  margin: 3px;
+}
+
+.submit:hover {
+  background-color: whitesmoke;
+  border: #e04b52 solid 1px;
+  color: #e04b52;
+}
+
+
+.input-text {
+  border-radius: 5px;
+  height: 2rem;
+  width: 60%;
+  font-size: 18px;
+  font-family: monospace;
+  margin: 3px;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+}
